--- a/src/variables.scss
+++ b/src/variables.scss
@@ -11,6 +11,7 @@
   --light-state: #a8b2d1;
   --nav-items: #ccd6f6;
   --resume-hover: #64ffda1a;
+  --error: #cc0000;
   --transition: 0.3s ease;
   --fast-transition: 0.2s ease;
   --fz-xxs: 12px;
