--- a/src/App.css
+++ b/src/App.css
@@ -92,6 +92,7 @@ video {
 body {
   line-height: 1;
   background-color: var(--navy);
+  scroll-behavior: smooth !important;
 }
 body .login {
   overflow: hidden;
