--- a/src/components/Main/Login/Login.scss
+++ b/src/components/Main/Login/Login.scss
@@ -1,12 +1,15 @@
 @import "../../../variables";
 .login {
+  background: url('../../../assets/blob-scene-haikei.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   position: fixed;
   z-index: 1000;
   top: 0;
   left: 0;
-  background-color: var(--navy);
+  // background-color: var(--navy);
   display: block;
   opacity: 1;
   visibility: visible;
@@ -19,7 +22,7 @@
     flex-direction: column;
     width: 500px;
     margin: auto;
-    background-color: white;
+    background-color: var(--white);
     border-radius: 10px;
     padding: 70px 50px;
 
@@ -38,16 +41,22 @@
       padding: 5px 10px;
       font-family: inherit;
     }
-    button {
+    a {
       padding: 10px 15px;
       border: 1px solid var(--white);
       border-radius: 5px;
       background-color: var(--navy);
       transition: var(--transition);
-      color: var(--white);
+      color: var(--blue);
       margin-top: 10px;
       font-family: inherit;
       cursor: pointer;
+      text-align: center;
+    }
+    p{
+      font-size: var(--fz-sm);
+      color: var(--error);
+      margin-top: 10px;
     }
   }
 
@@ -55,5 +64,14 @@
     display: none;
     opacity: 0;
     visibility: hidden;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .login {
+    .login-inner {
+      width: 50%;
+      margin: auto;
+    }
   }
 }
