--- a/src/components/Main/About/About.scss
+++ b/src/components/Main/About/About.scss
@@ -12,6 +12,7 @@
       font-size: var(--fz-xl);
       color: var(--state);
       line-height: 1.3;
+      margin-bottom: 15px;
     }
     .skillset {
       ul {
