--- a/src/components/Main/Workplace/Workplace.scss
+++ b/src/components/Main/Workplace/Workplace.scss
@@ -38,17 +38,17 @@
         }
       }
       &::-webkit-scrollbar {
-        height: 2px !important;
+        display: none;
       }
       
-      &::-webkit-scrollbar-track {
-        background-color: transparent;
-      }
+      // &::-webkit-scrollbar-track {
+      //   background-color: transparent;
+      // }
       
-      &::-webkit-scrollbar-thumb {
-        background-color: var(--blue);
-        border-radius: 8px;
-      }
+      // &::-webkit-scrollbar-thumb {
+      //   background-color: var(--blue);
+      //   border-radius: 8px;
+      // }
       
     }
     .tab-info {
