feature: add resume and projects

--- a/src/components/Notification/Notification.scss
+++ b/src/components/Notification/Notification.scss
@@ -58,10 +58,10 @@
         width: 20px;
         margin-bottom: 5px;
         margin-left: -5px;
-        animation-name: wave-animation;
-        animation-duration: 1.5s;
-        animation-iteration-count: infinite;
-        transform-origin: 70% 70%;
+        // animation-name: wave-animation;
+        // animation-duration: 1.5s;
+        // animation-iteration-count: infinite;
+        // transform-origin: 70% 70%;
       }
       h1 {
         color: var(--green);
