--- a/src/components/Main/Project/Project.scss
+++ b/src/components/Main/Project/Project.scss
@@ -22,6 +22,13 @@
       transition: var(--fast-transition);
       &:hover {
         transform: translateY(-5px);
+        .card-inner{
+          .card-body{
+            h3{
+              color: var(--green);
+            }
+          }
+        }
       }
       .card-inner {
         width: 80%;
@@ -38,7 +45,14 @@
           svg {
             width: 40px;
             height: 40px;
-            &:last-child {
+          }
+          a {
+            color: var(--light-state);
+            transition: var(--transition);
+            &:hover{
+              color: var(--green);
+            }
+            svg {
               width: 20px;
               height: 20px;
             }
